--- a/UnityVRAR/notebooks/ch02/02_mplatform_vr.ipynb
+++ b/UnityVRAR/notebooks/ch02/02_mplatform_vr.ipynb
@@ -408,7 +408,10 @@
     "* [1] 절대강좌! VR/AR - 유니티로 배우는 가상현실/증강현실 콘텐츠 제작 기법\n",
     "    - https://wikibook.co.kr/vrar-lecture/\n",
     "    - github - https://github.com/indieGameMaker/VR2019\n",
-    "    - 블로그 - http://www.unity3dstudy.com/    "
+    "    - 블로그 - http://www.unity3dstudy.com/    \n",
+    "[2] google vr sdk - ios\n",
+    "    - https://developers.google.com/vr/develop/unity/get-started-ios\n",
+    "    - https://docs.unity3d.com/Manual/iphone-GettingStarted.html"
    ]
   }
  ],
